chat/envoy/envoy4-bak.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9902 }

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/site"
                route:
                  cluster: node_service
              - match:
                  prefix: "/site/grpc-test.html"
                route:
                  cluster: node_service
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: backend_grpc_service
                  max_grpc_timeout: 0s
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: custom-header-1,grpc-status,grpc-message
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.cors
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: backend_grpc_service
    connect_timeout: 10s
    http2_protocol_options: {}
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 9000
  - name: node_service
    connect_timeout: 10s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3000
